# finance-bot

./: .gitignore  README.md  cspell.json  deploy.py  pyproject.toml  samconfig.toml  template.yaml
finance_bot/: beancount_file.py  bot_lambda.py  budget_eur.py  constants.py  handlers.py  main.beancount  reports.py  requirements.txt
