[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = ""
authors = ["Sasha Kiselev <sdkiselev1812+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "20.4"
beancount = "2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
